Portrair before the name.

--- a/swade-spices/lang/en.json
+++ b/swade-spices/lang/en.json
@@ -4,5 +4,7 @@
   "SWADESPICE.sheetBackName": "Community Sheet Background:",
   "SWADESPICE.sheetBackHint": "Set a custom background image for the Community Sheet.",
   "SWADESPICE.AddSkillIcons": "Add icons for skills",
-  "SWADESPICE.AddSkillIconsHint": "Set this setting to add icons to skills in the sheet"
+  "SWADESPICE.AddSkillIconsHint": "Set this setting to add icons to skills in the sheet",
+  "SWADESPICE.PortraitFirst": "Add a character portrait",
+  "SWADESPICE.PortraitFirstHint": "Put a portrait of the character before the name"
 }
