--- a/swade-spices/lang/en.json
+++ b/swade-spices/lang/en.json
@@ -5,12 +5,16 @@
   "SWADESPICE.sheetBackHint": "Set a custom background image for the Community Sheet.",
   "SWADESPICE.tabColourName": "Tab and header background colour:",
   "SWADESPICE.tabColourHint": "Colour for the tabs and headers background.",
+  "SWADESPICE.tabColourButton": "Pick a Tab and header background colour. Default: #972824",
   "SWADESPICE.textColourName": "Tab and header text colour:",
   "SWADESPICE.textColourHint": "Colour for the tabs and headers text.",
+  "SWADESPICE.textColourButton": "Pick a Tab and header text colour. Default: #dfe6f5",
   "SWADESPICE.columnColourName": "Item column colour:",
   "SWADESPICE.columnColourHint": "(PC sheet only.) Changes the colour of the item columns background (in the items tab).",
+  "SWADESPICE.columnColourButton": "Pick a inventory column colour. Default: #972824",
   "SWADESPICE.columnTextColourName": "Item column text colour:",
   "SWADESPICE.columnTextColourHint": "(PC sheet only.) Changes the colour of the item columns text (in the items tab).",
+  "SWADESPICE.columnTextColourButton": "Pick a inventory column text colour. Default: #ffffff",
   "SWADESPICE.AddSkillIcons": "Add icons for skills",
   "SWADESPICE.AddSkillIconsHint": "Set this setting to add icons to skills in the sheet.",
   "SWADESPICE.PortraitFirst": "Add a character portrait",
