--- a/swade-spices/lang/en.json
+++ b/swade-spices/lang/en.json
@@ -15,6 +15,12 @@
   "SWADESPICE.columnTextColourName": "Item column text colour:",
   "SWADESPICE.columnTextColourHint": "(PC sheet only.) Changes the colour of the item columns text (in the items tab).",
   "SWADESPICE.columnTextColourButton": "Pick a inventory column text colour. Default: #ffffff",
+  "SWADESPICE.checkboxBGColourName": "Checkbox Background Colour:",
+  "SWADESPICE.checkboxBGColourHint": "Sets the Background colour for the checkboxes (for example the Shaken Checkbox).",
+  "SWADESPICE.checkboxBGColourButton": "Pick a checkbox colour. Default: #aca592",
+  "SWADESPICE.checkmarkColourName": "Ceckmark Colour:",
+  "SWADESPICE.checkmarkColourHint": "Sets the checkmark colour inside the checkbox after checking it.",
+  "SWADESPICE.checkmarkColourButton": "Pick a checkmark colour. Default: #972824",
   "SWADESPICE.AddSkillIcons": "Add icons for skills",
   "SWADESPICE.AddSkillIconsHint": "Set this setting to add icons to skills in the sheet.",
   "SWADESPICE.PortraitFirst": "Add a character portrait",
