--- a/swade-spices/lang/en.json
+++ b/swade-spices/lang/en.json
@@ -6,6 +6,9 @@
   "SWADESPICE.tabColourName": "Tab and header background colour:",
   "SWADESPICE.tabColourHint": "Colour for the tabs and headers background.",
   "SWADESPICE.tabColourButton": "Pick a Tab and header background colour. Default: #972824",
+  "SWADESPICE.activeTabColourName": "Active tab background colour:",
+  "SWADESPICE.activeTabColourHint": "Colour for the active tab background.",
+  "SWADESPICE.activeTabColourButton": "Pick a background colour for the active tab. Default: #aca592",
   "SWADESPICE.textColourName": "Tab and header text colour:",
   "SWADESPICE.textColourHint": "Colour for the tabs and headers text.",
   "SWADESPICE.textColourButton": "Pick a Tab and header text colour. Default: #dfe6f5",
