--- a/swade-spices/lang/en.json
+++ b/swade-spices/lang/en.json
@@ -1,4 +1,8 @@
 {
+  "SWADESPICE.BennieFrontName": "Custom Benny front image:",
+  "SWADESPICE.BennieFrontHint": "Path to the image to be shown on the Benny front side.",
+  "SWADESPICE.BennieBackName": "Custom Benny back image:",
+  "SWADESPICE.BennieBackHint": "Path to the image to be shown on the Benny back side. This image will be shown on the official sheet.",
   "SWADESPICE.sheetLogoName": "Custom Logo:",
   "SWADESPICE.sheetLogoHint": "Set up a custom logo to be shown on the character sheet (PC sheet only). (Make sure that you are allowed to use whatever you select here or on any of the settings below.)",
   "SWADESPICE.sheetBackName": "Community Sheet Background:",
