more configuration options

--- a/swade-spices/lang/en.json
+++ b/swade-spices/lang/en.json
@@ -11,15 +11,24 @@
   "SWADESPICE.tabColourHint": "Colour for the tabs and headers background.",
   "SWADESPICE.tabColourButton": "Pick a Tab and header background colour. Default: #972824",
   "SWADESPICE.activeTabColourName": "Active tab background colour:",
-  "SWADESPICE.activeTabColourHint": "Colour for the active tab background.",
+  "SWADESPICE.activeTabColourHint": "Colour for the active (and hovered over) tab background.",
   "SWADESPICE.activeTabColourButton": "Pick a background colour for the active tab. Default: #aca592",
+  "SWADESPICE.activeTabTextColourName": "Active tab text colour:",
+  "SWADESPICE.activeTabTextColourHint": "Pick a text colour for the active tab. Default: #dfe6f5",
+  "SWADESPICE.activeTabTextColourButton": "Colour for the active (and hovered over) tab text.",
   "SWADESPICE.tabBorderColourName": "Tab and header border colour:",
   "SWADESPICE.tabBorderColourHint": "Sets the colour of the tabs and headers border. It is 1px wide.",
   "SWADESPICE.tabBorderColourButton": "Pick a border colour for tabs and headers. Default: #2c4251",
   "SWADESPICE.tabBorderRadiusName": "Tab border radius:",
-  "SWADESPICE.tabBorderRadiusHint": "You can set round edges of your tabs with this option. It is the radius in pixels. Default: 4",
+  "SWADESPICE.tabBorderRadiusHint": "You can set round edges of your tabs with this option, it also affects powers in the Powers tab. It is the radius in pixels. Default: 4",
   "SWADESPICE.headerBorderRadiusName": "Header border radius:",
   "SWADESPICE.headerBorderRadiusHint": "You can set round edges of your headers with this option. It is the radius in pixels. Default: 0",
+  "SWADESPICE.quicAccessBGColourName": "Quick Access background colour:",
+  "SWADESPICE.quicAccessBGColourHint": "Changes the background colour of the Quick Access gear cards.",
+  "SWADESPICE.quicAccessBGColourButton": "Pick a background colour for the Quick Access. Default: #00000033",
+  "SWADESPICE.evenSkillsBGColourName": "Even Skills background colour:",
+  "SWADESPICE.evenSkillsBGColourHint": "(PC sheet only.) Changes the background colour of every second (even) Skill in the list of the PC sheet. It will be applied to even Edges, Hindrances (both in the Edges tab) and Gear (Inventory tab) as well.",
+  "SWADESPICE.evenSkillsBGColourButton": "Pick a background colour for the even Skills. Default: #0000001a",
   "SWADESPICE.textColourName": "Tab and header text colour:",
   "SWADESPICE.textColourHint": "Colour for the tabs and headers text.",
   "SWADESPICE.textColourButton": "Pick a Tab and header text colour. Default: #dfe6f5",
@@ -29,6 +38,9 @@
   "SWADESPICE.columnTextColourName": "Item column text colour:",
   "SWADESPICE.columnTextColourHint": "(PC sheet only.) Changes the colour of the item columns text (in the items tab).",
   "SWADESPICE.columnTextColourButton": "Pick a inventory column text colour. Default: #ffffff",
+  "SWADESPICE.passiveABTabColourName": "Passive AB tab background:",
+  "SWADESPICE.passiveABTabColourHint": "Changes the colour of the unselected Arcane Background tab (in the powers tab). The active (selected) one and the hovered over one share the colour of the general active tab (see above).",
+  "SWADESPICE.passiveABTabColourButton": "Pick a passive AB tab colour. Default: #972824",
   "SWADESPICE.checkboxBGColourName": "Checkbox Background Colour:",
   "SWADESPICE.checkboxBGColourHint": "Sets the Background colour for the checkboxes (for example the Shaken Checkbox).",
   "SWADESPICE.checkboxBGColourButton": "Pick a checkbox colour. Default: #aca592",
