--- a/swade-spices/lang/en.json
+++ b/swade-spices/lang/en.json
@@ -7,9 +7,12 @@
   "SWADESPICE.sheetLogoHint": "Set up a custom logo to be shown on the character sheet (PC sheet only). (Make sure that you are allowed to use whatever you select here or on any of the settings below.)",
   "SWADESPICE.sheetBackName": "Community Sheet Background:",
   "SWADESPICE.sheetBackHint": "Set a custom background image for the Community Sheet.",
+  "SWADESPICE.windowBGColourName": "Community Sheet background colour:",
+  "SWADESPICE.windowBGColourHint": "You only need that if your sheets background image has some amount of transparency. This sets a background colour for the community sheet so that a colour can be seen through a transparent background. This colour is also used for the chat if you toggle the option to set the chats background image to be your sheets background image. If not, there are no ill effects on the chat even if your sheets background image has transparency.",
+  "SWADESPICE.windowBGColourButton": "Pick a background colour for your sheet. Default: #faf9ed",
   "SWADESPICE.tabColourName": "Tab and header background colour:",
   "SWADESPICE.tabColourHint": "Colour for the tabs and headers background.",
-  "SWADESPICE.tabColourButton": "Pick a Tab and header background colour. Default: #972824",
+  "SWADESPICE.tabColourButton": "Pick a tab and header background colour. Default: #972824",
   "SWADESPICE.activeTabColourName": "Active tab background colour:",
   "SWADESPICE.activeTabColourHint": "Colour for the active (and hovered over) tab background.",
   "SWADESPICE.activeTabColourButton": "Pick a background colour for the active tab. Default: #aca592",
