--- a/swade-spices/lang/en.json
+++ b/swade-spices/lang/en.json
@@ -68,5 +68,8 @@
   "SWADESPICE.scrollbarColourButton": "Pick a scrollbar colour. Default: #782e22",
   "SWADESPICE.scrollbarBorderColourName": "Scrollbar border colour:",
   "SWADESPICE.scrollbarBorderColourHint": "Changes the border colour of scrollbars. It has a radius of 1 pixel. (Does not affect scrollbars in currently edited fields.)",
-  "SWADESPICE.scrollbarBorderColourButton": "Pick a scrollbar border colour. Default: #ff6400"
+  "SWADESPICE.scrollbarBorderColourButton": "Pick a scrollbar border colour. Default: #ff6400",
+  "SWADESPICE.None": "None",
+  "SWADESPICE.Actor": "Actor portrait",
+  "SWADESPICE.Token": "Token Image"
 }
