--- a/swade-spices/lang/en.json
+++ b/swade-spices/lang/en.json
@@ -52,8 +52,10 @@
   "SWADESPICE.checkmarkColourButton": "Pick a checkmark colour. Default: #972824",
   "SWADESPICE.AddSkillIcons": "Add icons for skills",
   "SWADESPICE.AddSkillIconsHint": "Set this setting to add icons to skills in the sheet.",
-  "SWADESPICE.PortraitFirst": "Add a character portrait",
+  "SWADESPICE.PortraitFirst": "Add a character portrait on the character sheet",
   "SWADESPICE.PortraitFirstHint": "Put a portrait of the character behind the name.",
+  "SWADESPICE.PortraitItemsName": "Add a character portrait on owned items",
+  "SWADESPICE.PortraitItemsHint": "This adds the characters portrait or token image to items the character owns.",
   "SWADESPICE.CharnameCenteredName": "Center character name",
   "SWADESPICE.CharnameCenteredHint": "Aligns the character name to the center of its field.",
   "SWADESPICE.ChatBackgroundName": "Custom chat background:",
