preparing sub-menu

--- a/swade-spices/lang/en.json
+++ b/swade-spices/lang/en.json
@@ -1,4 +1,10 @@
 {
+  "SWADESPICE.ColourSettingConf": "Colour configuration",
+  "SWADESPICE.ColourSettingConfLabel": "Open colour configurations",
+  "SWADESPICE.ColourSettingConfHint": "Inside this menu you can set all the colours for the community sheets.",
+  "SWADESPICE.ColourOptionSettingsName": "Colour Options:",
+  "SWADESPICE.ColourOptionSettingsHint": "Here you can set up the colours for the community sheets.",
+  "SWADESPICE.Save": "Save",
   "SWADESPICE.BennieFrontName": "Custom Benny front image:",
   "SWADESPICE.BennieFrontHint": "Path to the image to be shown on the Benny front side.",
   "SWADESPICE.BennieBackName": "Custom Benny back image:",
@@ -44,8 +50,8 @@
   "SWADESPICE.passiveABTabColourName": "Passive AB tab background:",
   "SWADESPICE.passiveABTabColourHint": "Changes the colour of the unselected Arcane Background tab (in the powers tab). The active (selected) one and the hovered over one share the colour of the general active tab (see above).",
   "SWADESPICE.passiveABTabColourButton": "Pick a passive AB tab colour. Default: #972824",
-  "SWADESPICE.checkboxBGColourName": "Checkbox Background Colour:",
-  "SWADESPICE.checkboxBGColourHint": "Sets the Background colour for the checkboxes (for example the Shaken Checkbox).",
+  "SWADESPICE.checkboxBGColourName": "Checkbox background colour:",
+  "SWADESPICE.checkboxBGColourHint": "Sets the background colour for the checkboxes (for example the Shaken Checkbox).",
   "SWADESPICE.checkboxBGColourButton": "Pick a checkbox colour. Default: #aca592",
   "SWADESPICE.checkmarkColourName": "Checkmark Colour:",
   "SWADESPICE.checkmarkColourHint": "Sets the checkmark colour inside the checkbox after checking it.",
