--- a/swade-spices/lang/en.json
+++ b/swade-spices/lang/en.json
@@ -77,6 +77,8 @@
   "SWADESPICE.scrollbarBorderColourName": "Scrollbar border colour:",
   "SWADESPICE.scrollbarBorderColourHint": "Changes the border colour of scrollbars. It has a radius of 1 pixel. (Does not affect scrollbars in currently edited fields.)",
   "SWADESPICE.scrollbarBorderColourButton": "Pick a scrollbar border colour. Default: #ff6400",
+  "SWADESPICE.openSFXName": "Open Sheet SFX:",
+  "SWADESPICE.openSFXHint": "The sound to be played whenever a sheet is opened. Empty this line if you don't want a sound effect upon opening a sheet. The SFX is only played for the user who opens a sheet, not for everyone.",
   "SWADESPICE.None": "None",
   "SWADESPICE.Actor": "Actor portrait",
   "SWADESPICE.Token": "Token Image"
