Header height is now configurable

--- a/swade-spices/lang/en.json
+++ b/swade-spices/lang/en.json
@@ -89,5 +89,7 @@
   "SWADESPICE.hideCurrHint": "This hides the currency from the PC sheet, for example when using the Wealth rules or in case you want to calculate weight for the currency.",
   "SWADESPICE.None": "None",
   "SWADESPICE.Actor": "Actor portrait",
-  "SWADESPICE.Token": "Token Image"
+  "SWADESPICE.Token": "Token Image",
+  "SWADESPICE.PCHeaderSizeName": "Character sheet header height",
+  "SWADESPICE.PCHeaderSizeHint": "Put a number here to specify an heigght, in pixels, to the header section, leave it blank for default behaviour"
 }
