different sounds for item sheets

--- a/swade-spices/lang/en.json
+++ b/swade-spices/lang/en.json
@@ -78,9 +78,13 @@
   "SWADESPICE.scrollbarBorderColourHint": "Changes the border colour of scrollbars. It has a radius of 1 pixel. (Does not affect scrollbars in currently edited fields.)",
   "SWADESPICE.scrollbarBorderColourButton": "Pick a scrollbar border colour. Default: #ff6400",
   "SWADESPICE.openSFXName": "Open Sheet SFX:",
-  "SWADESPICE.openSFXHint": "The sound to be played whenever a sheet is opened. Empty this line if you don't want a sound effect upon opening a sheet. The SFX is only played for the user who opens a sheet, not for everyone.",
+  "SWADESPICE.openSFXHint": "The sound to be played whenever a character sheet is opened. Empty this line if you don't want a sound effect upon opening a sheet. The SFX is only played for the user who opens a sheet, not for everyone.",
+  "SWADESPICE.openItemSFXName": "Open Item Sheet SFX:",
+  "SWADESPICE.openItemSFXHint": "The sound to be played whenever an item sheet (gear, weapon, edge, etc) is opened. Empty this line if you don't want a sound effect upon opening a sheet. The SFX is only played for the user who opens a sheet, not for everyone.",
   "SWADESPICE.closeSFXName": "Close Sheet SFX:",
-  "SWADESPICE.closeSFXHint": "The sound to be played whenever a sheet is closed. Empty this line if you don't want a sound effect upon closing a sheet. The SFX is only played for the user who closes a sheet, not for everyone.",
+  "SWADESPICE.closeSFXHint": "The sound to be played whenever a character sheet is closed. Empty this line if you don't want a sound effect upon closing a sheet. The SFX is only played for the user who closes a sheet, not for everyone.",
+  "SWADESPICE.closeItemSFXName": "Close Item Sheet SFX:",
+  "SWADESPICE.closeItemSFXHint": "The sound to be played whenever an item sheet (gear, weapon, edge, etc) is closed. Empty this line if you don't want a sound effect upon closing a sheet. The SFX is only played for the user who closes a sheet, not for everyone.",
   "SWADESPICE.lockRotationName": "Lock token rotation by default",
   "SWADESPICE.lockRotationHint": "This option locks the token rotation of newly created and imported actors by default. This is especially useful for portait style token art which you typically don't want to rotate when you rotate your directed light source. It does not change actors which already exist in the world. If you use top-down view tokens you should disable this option.",
   "SWADESPICE.hidePPName": "Hide Power Points",
