--- a/swade-spices/lang/en.json
+++ b/swade-spices/lang/en.json
@@ -92,7 +92,7 @@
   "SWADESPICE.hideCurrName": "Hide Currency",
   "SWADESPICE.hideCurrHint": "This hides the currency from the PC sheet, for example when using the Wealth rules or in case you want to calculate weight for the currency.",
   "SWADESPICE.hideTextName": "Hide Text from Header Buttons",
-  "SWADESPICE.hideTextHint": "This option hides all core and system text from buttons in the header fields. It will only leave the buttons and adds tooltips if the user hovers the mouse over it. This option can save a lot of space in the headers but can confuse new users.",
+  "SWADESPICE.hideTextHint": "This option hides all core and system text from buttons in the header fields. It will only leave the buttons and adds tooltips if the user hovers the mouse over it. This option can save a lot of space in the headers but can confuse new users. Currently a bit buggy but nothing bad will happen.",
   "SWADESPICE.None": "None",
   "SWADESPICE.Actor": "Actor portrait",
   "SWADESPICE.Token": "Token Image",
