translation strings and text colour

--- a/swade-spices/lang/en.json
+++ b/swade-spices/lang/en.json
@@ -1,14 +1,18 @@
 {
     "SWADESPICE.SettingName-LeftBarBGColour": "Left Bar Background Colour:",
     "SWADESPICE.SettingHint-LeftBarBGColour": "The background colour of the left bar on the sheet, where derived stats are.",
-    "SWADESPICE.SettingName-TopBarColour": "Top Bar Background Colour:",
-    "SWADESPICE.SettingHint-TopBarColour": "The background colour of the top bar on the sheet, where the name is.",
-    "SWADESPICE.SettingName-BodyBGColour": "Main Body Background Colour:",
-    "SWADESPICE.SettingHint-BodyBGColour": "The background colour of the main body on the sheet, where you find the tabs and their content.",
     "SWADESPICE.SettingName-LeftBarBGImage": "Left Bar Background Image:",
     "SWADESPICE.SettingHint-LeftBarBGImage": "The background image of the left bar on the sheet, where derived stats are.",
+    "SWADESPICE.SettingName-LeftBarLogo": "Logo:",
+    "SWADESPICE.SettingHint-LeftBarLogo": "The Logo that appears on the top left of the sheet.",
+    "SWADESPICE.SettingName-LeftBarHealthTextColour": "Health Text Colour:",
+    "SWADESPICE.SettingHint-LeftBarHealthTextColour": "The text colour for Wounds and Fatigue on the left bar.",
+    "SWADESPICE.SettingName-TopBarColour": "Top Bar Background Colour:",
+    "SWADESPICE.SettingHint-TopBarColour": "The background colour of the top bar on the sheet, where the name is.",
     "SWADESPICE.SettingName-TopBarBGImage": "Top Bar Background Image:",
     "SWADESPICE.SettingHint-TopBarBGImage": "The background image of the top bar on the sheet, where the name is.",
+    "SWADESPICE.SettingName-BodyBGColour": "Main Body Background Colour:",
+    "SWADESPICE.SettingHint-BodyBGColour": "The background colour of the main body on the sheet, where you find the tabs and their content.",
     "SWADESPICE.SettingName-BodyBGImage": "Main Body Background Image:",
     "SWADESPICE.SettingHint-BodyBGImage": "The background image of the main body on the sheet, where you find the tabs and their content.",
     "SWADESPICE.ThemeName": "Theme:",
@@ -16,10 +20,10 @@
     "SWADESPICE.CustomTitle": "Custom Sheet Configuration",
     "SWADESPICE.CustomSheetName":  "Custom sheet configuration",
     "SWADESPICE.CustomSheetLabel":  "Customize",
-    "SWADESPICE.CustomSheetHint": "Click this button to customize all aspects of the sheet",
+    "SWADESPICE.CustomSheetHint": "Click this button to customize all aspects of the sheet.",
     "SWADESPICE.Save": "Save",
     "SWADESPICE.Export": "Export to JSON",
     "SWADESPICE.Import": "Import",
-    "SWADESPICE.ImportWarning": "WARNING: Your current settings will be overwritten",
-    "SWADESPICE.ImportHint": "Select a json file to import"
+    "SWADESPICE.ImportWarning": "WARNING: Your current settings will be overwritten!",
+    "SWADESPICE.ImportHint": "Select a json file to import:"
 }
