new customisation options

--- a/swade-spices/lang/en.json
+++ b/swade-spices/lang/en.json
@@ -7,14 +7,30 @@
     "SWADESPICE.SettingHint-LeftBarLogo": "The Logo that appears on the top left of the sheet.",
     "SWADESPICE.SettingName-LeftBarHealthTextColour": "Health Text Colour:",
     "SWADESPICE.SettingHint-LeftBarHealthTextColour": "The text colour for Wounds and Fatigue on the left bar.",
+    "SWADESPICE.SettingName-LeftBarStatusTextColour": "Status Text Colour:",
+    "SWADESPICE.SettingHint-LeftBarStatusTextColour": "The text colour for status effects (i.e. Shaken).",
+    "SWADESPICE.SettingName-LeftBarDerivedNameTextColour": "Derived Stats Header Text Colour:",
+    "SWADESPICE.SettingHint-LeftBarDerivedNameTextColour": "The text colour for the headings under derived stats.",
+    "SWADESPICE.SettingName-LeftBarDerivedValueTextColour": "Derived Stats Text Colour:",
+    "SWADESPICE.SettingHint-LeftBarDerivedValueTextColour": "The text colour for the actual derived stats.",
+    "SWADESPICE.SettingName-LeftBarDerivedModifierTextColour": "Derived Stats Modifier Text Colour:",
+    "SWADESPICE.SettingHint-LeftBarDerivedModifierTextColour": "The text colour for the modifiers of derived stats (i.e. Armor).",
     "SWADESPICE.SettingName-TopBarColour": "Top Bar Background Colour:",
     "SWADESPICE.SettingHint-TopBarColour": "The background colour of the top bar on the sheet, where the name is.",
     "SWADESPICE.SettingName-TopBarBGImage": "Top Bar Background Image:",
     "SWADESPICE.SettingHint-TopBarBGImage": "The background image of the top bar on the sheet, where the name is.",
+    "SWADESPICE.SettingName-CharnameTextColour": "Charname Colour:",
+    "SWADESPICE.SettingHint-CharnameTextColour": "The colour of the characters name. This also affects Race, Rank and Advances.",
     "SWADESPICE.SettingName-BodyBGColour": "Main Body Background Colour:",
     "SWADESPICE.SettingHint-BodyBGColour": "The background colour of the main body on the sheet, where you find the tabs and their content.",
     "SWADESPICE.SettingName-BodyBGImage": "Main Body Background Image:",
     "SWADESPICE.SettingHint-BodyBGImage": "The background image of the main body on the sheet, where you find the tabs and their content.",
+    "SWADESPICE.SettingName-CheckboxColour":"Unchecked Checkbox Colour:",
+    "SWADESPICE.SettingHint-CheckboxColour":"The background colour of unchecked (deactivated) checkboxes.",
+    "SWADESPICE.SettingName-CheckboxColourChecked":"Checked Checkbox Colour:",
+    "SWADESPICE.SettingHint-CheckboxColourChecked":"The background colour of checked (activated) checkboxes.",
+    "SWADESPICE.SettingName-CheckmarkColour":"Checkmark Colour:",
+    "SWADESPICE.SettingHint-CheckmarkColour":"The colour of checkmarks in checked (activated) checkboxes.",
     "SWADESPICE.ThemeName": "Theme:",
     "SWADESPICE.ThemeHint": "Here you can load a predefined theme.",
     "SWADESPICE.CustomTitle": "Custom Sheet Configuration",
