compact mode setting (salieri)

--- a/swade-spices/lang/en.json
+++ b/swade-spices/lang/en.json
@@ -43,5 +43,7 @@
     "SWADESPICE.Export": "Export to JSON",
     "SWADESPICE.Import": "Import",
     "SWADESPICE.ImportWarning": "WARNING: Your current settings will be overwritten!",
-    "SWADESPICE.ImportHint": "Select a json file to import:"
+    "SWADESPICE.ImportHint": "Select a json file to import:",
+    "SWADESPICE.CompactModeName": "Compact Mode",
+    "SWADESPICE.CompactModeHint": "Compact Mode reduces the hight of the top bar (header) to make more space for the sheets tabs. As a result this decreases the size of the actor image preview. The actor image in the bio tab is unaffected."
 }
