renamed summary to quick access (salieri)

--- a/swade-spices/lang/en.json
+++ b/swade-spices/lang/en.json
@@ -46,7 +46,7 @@
     "SWADESPICE.ImportHint": "Select a json file to import:",
     "SWADESPICE.CompactModeName": "Compact Mode",
     "SWADESPICE.CompactModeHint": "Compact Mode reduces the hight of the top bar (header) to make more space for the sheets tabs. As a result this decreases the size of the actor image preview. The actor image in the bio tab is unaffected.",
-    "SWADESPICE.Summary": "Summary",
+    "SWADESPICE.QuickAccess": "Quick Access",
     "SWADESPICE.Traits": "Traits",
     "SWADESPICE.Edges": "Edges",
     "SWADESPICE.Hindrances": "Hindrances",
