added missing translation strings and setting tab sorting (salieri)

--- a/swade-spices/lang/en.json
+++ b/swade-spices/lang/en.json
@@ -39,6 +39,28 @@
     "SWADESPICE.CustomSheetName":  "Custom sheet configuration",
     "SWADESPICE.CustomSheetLabel":  "Customize",
     "SWADESPICE.CustomSheetHint": "Click this button to customize all aspects of the sheet.",
+    "SWADESPICE.SettingName-MainBodyTabIconsQA": "Quick Access Tab Icon:",
+    "SWADESPICE.SettingHint-MainBodyTabIconsQA": "The icon for the Quick Access tab on the sheet.",
+    "SWADESPICE.SettingName-MainBodyTabIconsTraits": "Traits Tab Icon:",
+    "SWADESPICE.SettingHint-MainBodyTabIconsTraits": "The icon for the Traits tab on the sheet.",
+    "SWADESPICE.SettingName-MainBodyTabIconsEdges": "Edges Tab Icon:",
+    "SWADESPICE.SettingHint-MainBodyTabIconsEdges": "The icon for the Edges tab on the sheet.",
+    "SWADESPICE.SettingName-MainBodyTabIconsHindrances": "Hindrances Tab Icon:",
+    "SWADESPICE.SettingHint-MainBodyTabIconsHindrances": "The icon for the Hindrances tab on the sheet.",
+    "SWADESPICE.SettingName-MainBodyTabIconsAbilities": "Special Abilities Tab Icon:",
+    "SWADESPICE.SettingHint-MainBodyTabIconsAbilities": "The icon for the Special Abilities tab on the sheet.",
+    "SWADESPICE.SettingName-MainBodyTabIconsInventory": "Inventory Tab Icon:",
+    "SWADESPICE.SettingHint-MainBodyTabIconsInventory": "The icon for the Inventory tab on the sheet.",
+    "SWADESPICE.SettingName-MainBodyTabIconsPowers": "Powers Tab Icon:",
+    "SWADESPICE.SettingHint-MainBodyTabIconsPowers": "The icon for the Quick Access tab on the sheet.",
+    "SWADESPICE.SettingName-MainBodyTabIconsEffects": "Effects Tab Icon:",
+    "SWADESPICE.SettingHint-MainBodyTabIconsEffects": "The icon for the (Active) Effects tab on the sheet.",
+    "SWADESPICE.SettingName-MainBodyTabIconsDescription": "Description Tab Icon:",
+    "SWADESPICE.SettingHint-MainBodyTabIconsDescription": "The icon for the Description tab on the sheet.",
+    "SWADESPICE.SettingName-MainBodyTabBackgroundColour": "Tab Bar Background Colour:",
+    "SWADESPICE.SettingHint-MainBodyTabBackgroundColour": "The background colour of the bar behind the tab icons.",
+    "SWADESPICE.SettingName-MainBodyTabTextColour": "Tab Bar Text Colour:",
+    "SWADESPICE.SettingHint-MainBodyTabTextColour": "The text colour displayed in the bar with the tab icons.",
     "SWADESPICE.Save": "Save",
     "SWADESPICE.Export": "Export to JSON",
     "SWADESPICE.Import": "Import",
